<resources>
    <string name="app_name">The Elite Flower APP</string>
    <string name="todo">TODO</string>
    <string name="aceptar">Aceptar</string>
    <string name="usuario">Usuario</string>
    <string name="the_elite_flower">Iniciar Sesión</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="imagenelite">ImagenElite</string>
</resources>